styles.css
html {
  height: 100%;
}

body {
font-family: 'Conv_gs', 'Gill Sans', Arial, sans-serif;
font-weight: normal;
font-style: normal;
margin: 0;
height: 100%;
}

p {
  color: black;
  font-size: 100%;
  padding:3vw;
  margin:0;
}

.homepageMenu {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  min-width: 100%;
  height: 100%;
  background-color: black;
}

.homepageMenu .about {
  right: 50px;
  padding-left: 100px;
  top: 15px;
  z-index: 500;
  cursor: pointer;
  font-size: 50px;
  padding-top: 120px;
  line-height: 27px;
  width: 160px;
}

.navBar {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index:100;
}


.link {
  text-decoration: none;
  color: white;
}



.homepageMenu .blog {
  color: white;
  text-align: center;
  z-index: 500;
  cursor: pointer;
  font-size: 50px;
  padding-top: 150px;
}

.fullWidth {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  min-width: 100%;
  height: 100vh;
  background-color: white;
}

.fullwrap {
  display: block;
}

.halfWidth .left{
  box-sizing: border-box;
}

.halfWidth {
  width: 50%;
  margin-left: auto;
  margin-right: auto;
  max-width: 100%;
  height: 100vh;
  background-color: white;
}

.fixed {
  position: fixed;
  top: 0;
  z-index: 99;
  left: 0;;
}

.left {
  float: left;
}

.right {
  float: right;
}

.separation-line:after {
    content:"";
    position: absolute;
    z-index: -1;
    top: 0;
    bottom: 0;
    left: 100%;
    border-left: 2px solid rgb(81, 130, 157);
}

section {
  position: relative;
}

.tall {
  height: 100vh;
}
.row {
  margin: 0 auto;
  max-width: 62.5rem;
  width: 100%;
}

.blog1 {
  background-color: rgb(111,178,214);
  background-position: center center;
  background-repeat: repeat;
  opacity: 0.9;
}

.blog2{
  background-color: rgb(47,155,214);
  background-position: center center;
  background-repeat: repeat;
  opacity: 0.9;
}

.blog3{
  background-color: rgb(30,99,137);
  background-position: center center;
  background-repeat: repeat;
  opacity: 0.9;
}


.blog4{
  background-color: rgb(238,187,62);
  background-position: center center;
  background-repeat: repeat;
}

.blog5{
  background-color: rgb(28,50,89);
  background-position: center center;
  background-repeat: repeat;
}

.blog6{
  background-color: rgb(69,158,182);
  background-position: center center;
  background-repeat: repeat;
}

.blog7{
  background-color: rgb(121,242,242);
  background-position: center center;
  background-repeat: repeat;
}

.blog8{
  background-color: rgb(114,122,166);
  background-position: center center;
  background-repeat: repeat;
}head

.blog9{
  background-color: rgb(1,3,38);
  background-position: center center;
  background-repeat: repeat;
}

.header {
  margin:0;
  text-align: center;
  color: rgb(181,206,220);
  z-index: 500;
  top: 30px;
  cursor: pointer;
  font-size: 50px;
  padding-top: 150px;
}

.links-header {
  text-align: center;
  color: rgb(255,253,247);
  z-index: 500;
  top: 30px;
  cursor: pointer;
  font-size: 50px;
  padding-top: 150px;
}
.header-about {
  text-align: center;
  color: rgb(1,30,51);
  z-index: 500;
  top: 30px;
  cursor: pointer;
  font-size: 50px;
  padding-top: 150px;
}

img {
  width: 100%;
}

#fade img {
  position:absolute;
  left:0;
  -webkit-transition: opacity 1s ease-in-out;
  -moz-transition: opacity 1s ease-in-out;
  -o-transition: opacity 1s ease-in-out;
  transition: opacity 1s ease-in-out;
}


.menu {
  position: fixed;
  z-index: 500;
  right: 20px;
  top: 15px;
  color: white;
  padding: 7 0 7 7;
  cursor: pointer;
  font-size: 40px;
  line-height: 27px;
  width: 58px;
  text-align: center;
}

.link2 {
  text-decoration: none;
  color: white;
}

.imageforMobile {
  display: none;
}

.homepageMenu .links {
  position: fixed;
  color: white;
  text-align: right;
  z-index: 500;
  right: 20px;
  top: 15px;
  padding: 7 0 7 7;
  cursor: pointer;
  font-size: 70px;
  line-height: 27px;
  width: 58px;
  text-align: center;
}

/*
      Media Queries
*/

/*html { font-size: 1em; }

h1 { font-size: 2.074em; }

h2 { font-size: 1.728em; }*/



@media screen and (min-width: 1400px) {
  html { font-size: 1.25em; }
}


@media screen and (max-width: 700px) {
    .halfWidth {
      width: 100%;
      height: 100vh;
    }
    .left{
      width: 0%;
    }
    .imageforMobile {
      display: block;
      height: 100%;
    }
    }
  /*.tall {
    height: 200vh;
  }*/
}

